[Feature] Add 'GET '/api/v1/shopping-basket/user'
[Issue No]